# solar-coronal-inversion

./: .gitignore  .numba_config.yaml  .readthedocs.yaml  CLEDB_invert.ipynb  CLEDBenv.yml  LICENSE  README-SLURM.md  README.md  README_SLURM.md  TODO.md  code_of_conduct.md  constants.py  ctrlparams.py  pyproject.toml  test_1line.ipynb  test_1line.py  test_2line.ipynb  test_2line.py  test_cledb_slurm.sh
.github/workflows/: pypi_publish.yml  test.yml
CLEDB_BUILD/: DB.INPUT  PyCELP_generate_lookup.ipynb  README-RUNDB.md  rundb_1line.sh  rundb_1line_slurm.sh  rundb_1line_with_CLE.sh  rundb_1line_with_CLE_slurm.sh  rundb_1line_with_PyCELP.py
CLEDB_BUILD/config/: ATOM.fe13  ATOM.si09  ATOM.si10  CHIANTI_10.1_database  CHIANTI_11.0_database  DB.INPUT  INPUT.fe13a  INPUT.fe13b  INPUT.si09  INPUT.si10  IONEQ  db2021_darwin  db2021_linux  db2021_rclinux  db203_darwin  db203_linux  db203_rclinux  db204_darwin  db204_linux  db204_rclinux  db205_linux
CLEDB_PREPINV/: .numba_config.yaml  CLEDB_PREPINV.py
CLEDB_PROC/: CLEDB_PROC.py
Cryo-NIRSP-20231011/: readme-cryodata-sample.txt
Cryo-NIRSP-20231011/AKKVZ/: CRYO-NIRSP_L1_20231011T182044_AKKVZ_user_tools.asdf
codedoc-latex/: README-CODEDOC.aux  README-CODEDOC.bbl  README-CODEDOC.bcf  README-CODEDOC.blg  README-CODEDOC.dvi  README-CODEDOC.run.xml  README-CODEDOC.tex  README-CODEDOC.tex.bak  bibtex.bib  refs.bib
docs/: .readthedocs.yaml  README.rst  requirements.in  requirements.txt
docs/source/: api_reference.rst  changelog.rst  conf.py  (+12 more)
tests/: debug_unittests.ipynb  sample_test_stokesspectra.npz  test_functions.py
(+4 files in other folders)
